force-app/main/default/objects/TemplateDocumento__c/fields/ConteudoTemplate__c.field-meta.xml
<CustomField>
    <fullName>ConteudoTemplate__c</fullName>
    <label>Conteúdo do Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>