force-app/main/default/objects/TemplateDocumento__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipName>Templates_de_Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>