force-app/main/default/objects/TemplateDocumento__c/fields/TipoTemplate__c.field-meta.xml
<CustomField>
    <fullName>TipoTemplate__c</fullName>
    <label>Tipo de Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Outro Documento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>