force-app/main/default/objects/TemplateDocumento__c/recordTypes/DocumentosEmpreendimento.recordType-meta.xml
<RecordType>
    <fullName>DocumentosEmpreendimento</fullName>
    <active>true</active>
    <label>Documentos do Empreendimento</label>
</RecordType>