force-app/main/default/objects/TemplateDocumento__c/recordTypes/Outros.recordType-meta.xml
<RecordType>
    <fullName>Outros</fullName>
    <active>false</active>
    <label>Outros</label>
</RecordType>